# Hard-Drive-Homicide

./: .gitignore  Audio.h  CMakeLists.txt  Font.cpp  Font.h  README.md  Render.cpp  Render.h  TextureLoader.h  app.cpp  app.h  icon.rc  input.h  main.cpp  resource.h  stb_image.cpp  textureLoader.cpp  typeStructs.h  vkhelper.cpp  vkhelper.h  vkinit.cpp  vkinit.h
shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
src/: _glm.h  actors.cpp  actors.h  app.cpp  app.h  main.cpp  map.cpp  map.h  message.h  messageManager.cpp  messageManager.h  render.cpp  render.h  sprite.cpp  sprite.h  texfont.cpp  texture_loader.cpp  texture_loader.h  title.h  typeStructs.h  vkhelper.h  vkinit.cpp  vkinit.h
src/framework/: audio.h  input.h  render.cpp  render.h  texfont.cpp  texfont.h  texture_loader.cpp  texture_loader.h  typeStructs.h  vkinit.cpp  vkinit.h
src/game/: _glm.h  camera.cpp  camera.h  consts.h  gameRandom.h  gamehelper.h  simpleInput.h  timer.h
